# git-workspaces

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/domain/: discover.rs  manifest.rs  mod.rs  plan.rs  select.rs  status.rs  worktree.rs
src/shell/: error.rs  exec.rs  fs.rs  git.rs  mod.rs
tests/: add_spec.rs  checkout_spec.rs  exec_spec.rs  init_spec.rs  list_spec.rs  plumbing_smoke.rs  status_spec.rs  sync_spec.rs  worktree_spec.rs
tests/support/: mod.rs
