[package]
name = "git-workspace"
version = "0.1.0"
edition = "2021"
description = "Manifest-driven multi-repo git plugin"
license = "MPL-2.0"
repository = "https://github.com/nicolaei/git-workspace"
homepage = "https://github.com/nicolaei/git-workspace"

[[bin]]
name = "git-workspace"
path = "src/main.rs"

[lib]
name = "git_workspace"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
