[package]
name = "git-multirepo"
version = "0.3.0"
edition = "2021"
description = "Manifest-driven multi-repo git plugin"
license = "MPL-2.0"
repository = "https://github.com/nicolaei/git-multirepo"
homepage = "https://github.com/nicolaei/git-multirepo"

[[bin]]
name = "git-multirepo"
path = "src/main.rs"

[lib]
name = "git_multirepo"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
